# nsu-titmetable-bot

./: .gitignore  README.md  dev-requirements.txt  flake.nix  main.py  pyproject.toml  requirements.txt
