[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
version = "0.0.1"
dependencies = [
        "aiogram",
        "beautifulsoup4",
        "requests",
        "dotenv"
] 
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
